// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Root Component renders correctly with children and HTML attributes 1`] = `
<div>
  <div
    class="flex flex-col h-fit min-h-[372px] w-[240px] max-w-[240px] bg-transparent justify-start text-xl text-[#030303] dark:text-white"
    data-custom-prop="custom-value"
    data-testid="root-test-id"
  >
    <div
      data-testid="test-child"
    >
      Test Child
    </div>
  </div>
</div>
`;

exports[`Menu Section Component renders correctly with children and HTML attributes 1`] = `
<div>
  <section
    class="flex"
    data-custom-prop="custom-value"
    data-testid="section-test-id"
  >
    <div
      data-testid="test-child"
    >
      Test Child
    </div>
     
  </section>
</div>
`;
